# kingmaker

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  junit.xml  pyproject.toml
.github/: README.md
.github/workflows/: ci.yml  docs.yml
docs/: api.rst  conf.py  examples.rst  index.rst  installation.md
examples/: basic_demo.ipynb  fitting_demo.ipynb  likelihood_demo.ipynb
kingmaker/: __init__.py  distribution.py  fitting.py  pdf.py  utils.py  wrapper.py
tests/: __init__.py  test_basic.py  test_fitting.py  test_interpolated_king_pdf.py  test_king_pdf.py  test_template_smeared_king_pdf.py  test_utils.py
