[build-system]
requires = ["setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = 'kingmaker'
description='A library for building and using King/Moffat distributions for point source analyses'
readme = "README.md"
authors= [ {name='Michael Larson', email='mlarson@icecube.wisc.edu'} ]
dependencies = [
    'numpy',
    'scipy',
    'numba',
    'matplotlib',
    'healpy',
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "pre-commit",
  "ruff",
  "mypy",
  "pytest",
  "pytest-cov",
]

[project.urls]
Documentation = "https://docs.icecube.aq/csky/main/"
Source = "https://github.com/mjlarson/kingmaker/"

[tool.setuptools]
packages=['kingmaker']
zip-safe=false

[tool.ruff]
line-length = 100
include = ["*.py", "**/pyproject.toml"]
# Skip def vs lambda rule, .
lint.ignore = ["E731"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.per-file-ignores]
# Ignore unused variable, import location, def vs lambda,  for tests
"tests/**.py" = ["F841", "E402", "E731"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
no_implicit_optional = true

# Start lenient, can tighten over time
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "kingmaker.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["kingmaker"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

